fix(button): button has an extra margin when using icon without label

--- a/src/styles/button.styl
+++ b/src/styles/button.styl
@@ -28,12 +28,14 @@
   .sui-icon {
     font-size 16px
     margin-top -2px
-    margin-right 4px
+  }
 
-    &.is-right {
-      margin-left 4px
-      margin-right 0
-    }
+  &.has-icon &__label {
+    margin-left 4px
+  }
+
+  .loader {
+    margin-right 4px
   }
 
   make-button(color--primary)
